--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,6 +1,3 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<p>Author: {{author}}</p>
-<p>Company: {{company}}</p>
-
+<p>Ventana de inicio principal funcionando</p>
 
