--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -7,7 +7,11 @@
     <link rel='stylesheet' href='/styles/app.css' />
   </head>
   <body>
+    {{!-- Vista parcial de la barra de navegación --}}
+    {{> _navbar}}
+    <div class="container">
     {{{body}}}
+    </div>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/js/bundle.js"></script>
