--- a/server/views/home/about.hbs
+++ b/server/views/home/about.hbs
@@ -1,1 +1,3 @@
-<h1>{{title}}</h1>
+<h2>Acerca De...</h2>
+<p>Aplicación que permite el registro de ideas de proyectos.</p>
+<p>Versión: {{appVersion}}</p>
