--- a/server/views/partials/_navbar.hbs
+++ b/server/views/partials/_navbar.hbs
@@ -1,11 +1,21 @@
-      <nav>
+      <nav class="light-blue darken-4">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="/" class="brand-logo">&#128209;ProjNotes</a>
+            <a href="/" class="brand-logo">
+            &#128209;ProjNotes
+            </a>
             <ul class="right hide-on-med-and-down">
               <li><a href="/">Inicio</a></li>
               <li><a href="/about">Acerca de...</a></li>
             </ul>
+            {{!-- barra de Navegación Movil --}}
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger">
+              <i class="material-icons">Menu</i>
+            </a>
+              <ul class="sidenav" id="nav-mobile">
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/about">Acerca de...</a></li>
+              </ul>
           </div>
         </div>
       </nav>
